# webdocs-mcp-server

./: .gitignore  README.md  agent_utils.py  agents.md  agents.py  agents_stream_prompt.py  agents_stream_tools.py  executor.py  main.py  mcp.json  mcp_server.py  planner.py  pyproject.toml  requirements.txt  settings.json  settings.py  summarizer.py  tool_registry.py  update_mcp_path.py
tests/: __init__.py  test_agents_endpoint.py  test_agents_stream_tools.py  test_executor.py  test_integration.py  test_planner.py  test_summarizer.py
tools/: __init__.py  download_pdfs.py  download_pdfs_from_text.py  extract_links.py  mcp.py  open_in_user_browser.py  ping.py  playwright_sample.py  playwright_test.py  prompt_utils.py  react_browser.py  scrape_website.py  webscraper.py
tools/prompts/: download_pdfs.txt  download_pdfs_from_text.txt  extract_links.txt  open_in_user_browser.txt  ping.txt  react_browser_task.txt  scrape_website.txt
