[project]
name = "webdocs-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
description = "Converted from requirements.txt"
authors = ["Your Name <your.email@example.com>"]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "attrs==25.3.0",
  "authlib==1.6.0",
  "beautifulsoup4==4.13.4",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "cryptography==45.0.4",
  "exceptiongroup==1.3.0",
  "fastapi==0.110.0",
  "fastmcp==2.8.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.0",
  "idna==3.10",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "langchain-core==0.3.65",
  "langdetect==1.0.9",
  "langgraph==0.4.8",
  "langgraph-checkpoint==2.0.26",
  "langgraph-prebuilt==0.2.2",
  "langgraph-sdk==0.1.70",
  "langsmith==0.3.45",
  "markdown-it-py==3.0.0",
  "mcp==1.9.3",
  "mdurl==0.1.2",
  "ollama==0.5.1",
  "openapi-pydantic==0.5.1",
  "orjson==3.10.18",
  "ormsgpack==1.10.0",
  "outcome==1.3.0.post0",
  "packaging==24.2",
  "pip==25.1.1",
  "pycparser==2.22",
  "pydantic==2.11.5",
  "pydantic-core==2.33.2",
  "pydantic-settings==2.9.1",
  "pygments==2.19.1",
  "pysocks==1.7.1",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "pyyaml==6.0.2",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "rich==14.0.0",
  "selenium==4.32.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.7",
  "sse-starlette==2.3.6",
  "starlette==0.36.3",
  "tenacity==9.1.2",
  "trio==0.30.0",
  "trio-websocket==0.12.2",
  "typer==0.16.0",
  "typing-extensions==4.13.2",
  "typing-inspection==0.4.1",
  "urllib3==2.4.0",
  "uvicorn==0.27.1",
  "webdriver-manager==4.0.2",
  "websocket-client==1.8.0",
  "playwright==1.53.0",
  "wsproto==1.2.0",
  "pytest==8.4.0",
  "xxhash==3.5.0",
  "zstandard==0.23.0",
  "pyperclip==1.8.2",
  "flake8==7.2.0",
  "langchain-ollama==0.3.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"
